Fixed things I think. Note to self: editing in the solution view edits the available folder, but not vice versa. In the future, work within the solution. Also, getting "Severity Code Description Project File Line Suppression State Error C2864 'OtherFunctions::debuggingMode': a static data member with an in-class initializer must have non-volatile const integral type or be specified as 'inline' Peace Treaty V1.2 C:\Users\Brennen\source\repos\brthhule\Peace-Treaty-V1.2\Peace Treaty V1.2\Misc\OtherFunctions.h 66 "  error

--- a/InfrastructureThing/InfrastructureThing.vcxproj
+++ b/InfrastructureThing/InfrastructureThing.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{67faa18e-d81f-42f4-803d-e8ce2fcd98af}</ProjectGuid>
-    <RootNamespace>Infrastructure</RootNamespace>
+    <ProjectGuid>{600d9d1a-4307-4264-b43d-092db8616300}</ProjectGuid>
+    <RootNamespace>InfrastructureThing</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -140,10 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Infrastructure.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Infrastructure.cpp" />
+    <ClCompile Include="InfrastructureThing.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
