--- a/InfrastructureThing/InfrastructureThing.vcxproj.filters
+++ b/InfrastructureThing/InfrastructureThing.vcxproj.filters
@@ -21,9 +21,12 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Infrastructure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Infrastructure.cpp">
+    <ClCompile Include="InfrastructureThing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
