Made some temporary fixes

--- a/InfrastructureThing/InfrastructureThing.vcxproj
+++ b/InfrastructureThing/InfrastructureThing.vcxproj
@@ -152,6 +152,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PeaceTreatyTest2\PeaceTreatyTest2.vcxproj">
+      <Project>{131b5575-99eb-425f-82ac-18db2df80e4e}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
