--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -129,7 +129,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Input.cpp" />
     <ClCompile Include="MA\ArmyOverviewMA.cpp" />
     <ClCompile Include="MA\AttackMA.cpp" />
     <ClCompile Include="MA\MapMA.cpp" />
@@ -137,7 +136,7 @@
     <ClCompile Include="MA\ScoutMA.cpp" />
     <ClCompile Include="MA\TrainMA.cpp" />
     <ClCompile Include="Misc\LinkedList.cpp" />
-    <ClCompile Include="Misc\OtherFunctions.cpp" />
+    <ClCompile Include="Misc\OF.cpp" />
     <ClCompile Include="Peace Treaty V1.2.cpp" />
     <ClCompile Include="PlayerAction.cpp" />
     <ClCompile Include="Units\AllUnits.cpp" />
@@ -195,7 +194,7 @@
     <ClInclude Include="MA\TrainMA.h" />
     <ClInclude Include="Misc\ConstValues.h" />
     <ClInclude Include="Misc\LinkedList.h" />
-    <ClInclude Include="Misc\OtherFunctions.h" />
+    <ClInclude Include="Misc\OF.h" />
     <ClInclude Include="PlayerAction.h" />
     <ClInclude Include="Units\AllUnits.h" />
     <ClInclude Include="Units\CommanderProfile.h" />
