Fixing errors. Created Structure.h/Structure namespace to hold continentSize, turn, other game structure mechanics

--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -184,6 +184,7 @@
     <Text Include="TxtFiles\Synopsis.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Structure.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Interfaces\Build.h" />
     <ClInclude Include="MA\ArmyOverviewMA.h" />
