Getting EDITANDCONTINUE message for "input.cp" from the Hot Reload file

--- a/PeaceTreatyTest2/PeaceTreatyTest2.vcxproj
+++ b/PeaceTreatyTest2/PeaceTreatyTest2.vcxproj
@@ -25,6 +25,11 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Peace Treaty V1.2\Peace Treaty V1.2.vcxproj">
+      <Project>{830c0685-efa7-4e30-995a-fcf04679e5e0}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <ProjectGuid>{131B5575-99EB-425F-82AC-18DB2DF80E4E}</ProjectGuid>
@@ -96,7 +101,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
