--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj.filters
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="CV.cpp">
       <Filter>Source Files\Misc</Filter>
     </ClCompile>
+    <ClCompile Include="aliases.txt">
+      <Filter>AdministrativeDocs</Filter>
+    </ClCompile>
+    <ClCompile Include="Mobility.cpp">
+      <Filter>Source Files\Units</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\AdministrativeDocs\debugQuickAccess.txt">
@@ -224,6 +230,9 @@
     <Text Include="..\..\..\..\..\Downloads\logOverview.txt">
       <Filter>ProjectLog</Filter>
     </Text>
+    <Text Include="color.txt">
+      <Filter>AdministrativeDocs</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MA\TrainMA.h">
@@ -290,6 +299,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Troops.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mobility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
